# nfsdict

./: .gitignore  LICENSE  README.md  nfsdict.py  pyproject.toml
